--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+
+    <a href="/flights">Flights List</a>
+    <a href="/flights/new">Add New Flight</a>
   </body>
 </html>
