--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -26,6 +26,7 @@
           <td><%= flight.airport %></td>
           <td><%= flight.flightNo %></td>
           <td><%= flight.departs %></td>
+          <td><a href="/flights/<%= flight._id %>">Flight Details</a></td>
         </tr>
       <% }); %>
     </tbody>
