--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -19,5 +19,38 @@
         <div><%= flight.departs %></div>
       </section>
     
+    <!-- new markup below -->
+    <br><br><h2>Destinations</h2>
+    <form id="add-destination-form" method="POST"
+      action="/flights/<%= flight._id %>/destinations">
+      <label>Destinations:</label>
+      <textarea name="destination"></textarea>
+      <label>Arrival Date:
+          <input type="date" name="arrival">
+        </label><br>
+        <input type="submit" value="Add Arrival">
+    </form>
+    
+
+        <table>
+          <thead>
+            <tr>
+              <th>Destination</th>
+              <th>Arrival Date</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% flight.destinations.forEach(function(dest) { %>
+              <tr>
+                <td><%= dest.destination %></td>
+                <td><%= dest.arrival %></td>
+              </tr>
+            <% }); %>
+          </tbody>
+        </table>
+
+
+
+
 </body>
 </html>
