--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flight Details</title>
 </head>
 <body>
 
@@ -17,18 +17,24 @@
         <div><%= flight.flightNo %></div>
         <div>Departure Date: </div>
         <div><%= flight.departs %></div>
+        <div> Tickets:</div>
+        <ul>
+          <%- flight.passengers.map(p => 
+            `<li>${p.seat} ${p.price} ${p.flight}</li>`
+          ).join('') %>
+        </ul>
+
       </section>
     
-    <!-- new markup below -->
     <br><br><h2>Destinations</h2>
-    <form id="add-destination-form" method="POST"
-      action="/flights/<%= flight._id %>/destinations">
+
+    <form id="add-destination-form" method="POST" action="/flights/<%= flight._id %>/destinations">
       <label>Destinations:</label>
-      <textarea name="destination"></textarea>
+      <textarea name="airport"></textarea>
       <label>Arrival Date:
           <input type="date" name="arrival">
         </label><br>
-        <input type="submit" value="Add Arrival">
+        <input type="submit" value="Add destination">
     </form>
     
 
@@ -42,12 +48,14 @@
           <tbody>
             <% flight.destinations.forEach(function(dest) { %>
               <tr>
-                <td><%= dest.destination %></td>
+                <td><%= dest.airport %></td>
                 <td><%= dest.arrival %></td>
               </tr>
             <% }); %>
           </tbody>
         </table>
+
+<a href="/<%= flight._id %>/tickets/new">Add New Ticket</a>
 
 
 
