--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -7,6 +7,7 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <title>All Flights</title>
 </head>
+<%- include('../partials/header') %>
 <body>
   <h1>Flights List</h1>
   <table>
