--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,12 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  <%- include('../views/partials/header') %>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Welcome to Mongoose Flights</h1>
 
 
-    <a href="/flights">Flights List</a>
-    <a href="/flights/new">Add New Flight</a>
+
+
   </body>
 </html>
