--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -35,9 +35,8 @@
         <input type: number name="flightNo">
       </label><br>
 
-
       <label>Departure Date (Need to fix the deault on this this):
-        <input type="date" name="departs">
+        <input type="datetime-local" name="departs">
       </label><br>
       <input type="submit" value="Add Flight">
     </form>
